deployment/service-back.yml
apiVersion: v1
kind: Service
metadata:
  name: tissea-back
  namespace: project-gp-2
spec:
  selector:
    app: tissea-back
  ports:
  - name: http
    port: 5000
    targetPort: 5000
    protocol: TCP
  type: ClusterIP
