deployment/service-front.yml
apiVersion: v1
kind: Service
metadata:
  name: tissea-front
  namespace: project-gp-2
spec:
  selector:
    app: tissea-front
  ports:
  - name: http
    port: 3000
    targetPort: 3000
    protocol: TCP
  type: ClusterIP
